--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -2,8 +2,12 @@
 junit-jupiter = "5.10.2"
 junit-platform-launcher = "1.10.2"
 assertj = "3.25.3"
+javalin = "6.1.6"
+slf4j = "2.0.13"
 
 [libraries]
 assertj-core = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit-platform-launcher" }
+javalin = { group = "io.javalin", name = "javalin", version.ref = "javalin" }
+slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
