--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+shadow = "8.1.1"
 junit-jupiter = "5.10.2"
 junit-platform-launcher = "1.10.2"
 assertj = "3.25.3"
@@ -11,3 +12,6 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.r
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit-platform-launcher" }
 javalin = { group = "io.javalin", name = "javalin", version.ref = "javalin" }
 slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+
+[plugins]
+shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
