--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -5,6 +5,8 @@ junit-platform-launcher = "1.10.2"
 assertj = "3.25.3"
 javalin = "6.1.6"
 slf4j = "2.0.13"
+hikariCP = "5.1.0"
+h2database = "2.2.224"
 
 [libraries]
 assertj-core = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
@@ -12,6 +14,8 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.r
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit-platform-launcher" }
 javalin = { group = "io.javalin", name = "javalin", version.ref = "javalin" }
 slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+hikariCP = { group = "com.zaxxer", name = "HikariCP", version.ref = "hikariCP" }
+h2database = { group = "com.h2database", name = "h2", version.ref = "h2database" }
 
 [plugins]
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
