--- a/app/docker/prod/Dockerfile
+++ b/app/docker/prod/Dockerfile
@@ -1,8 +1,9 @@
 FROM openjdk:21-jdk-bookworm AS build
 WORKDIR /app
 COPY . .
-RUN ./gradlew installShadowDist --no-daemon --warning-mode all
+RUN ./gradlew installDist --no-daemon --warning-mode all
+
 
 FROM openjdk:21-jdk-bookworm AS runner
-COPY --from=build /app/build/install/app-shadow /app
-CMD ["/app/bin//app"]
+COPY --from=build /app/build/install/app /app
+CMD ["/app/bin/app"]
