--- a/app/src/main/resources/simplelogger.properties
+++ b/app/src/main/resources/simplelogger.properties
@@ -1,5 +1,6 @@
 org.slf4j.simpleLogger.defaultLogLevel=DEBUG
-org.slf4j.simpleLogger.log.java.sql=TRACE
-org.slf4j.simpleLogger.log.org.eclipse.jetty=INFO
+org.slf4j.simpleLogger.log.java.sql=DEBUG
 org.slf4j.simpleLogger.log.io.javalin=INFO
+org.slf4j.simpleLogger.log.org.eclipse.jetty=INFO
+org.slf4j.simpleLogger.log.com.zaxxer.hikari.HikariConfig=INFO
 org.slf4j.simpleLogger.log.com.zaxxer.hikari.pool.HikariPool=INFO
